# dataflow-scheduler

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  README.md
cmake/: AddDataflowScheduler.cmake  AddDataflowSchedulerPython.cmake  CMakeLists.txt  Config.cmake.in  clang-format.cmake
include/: CMakeLists.txt
include/dataflow-scheduler/: Pipeline.h  RegisterEverything.h  dt_exception.h
include/dataflow-scheduler/Analysis/: InvarianceCheck.h  MemoryTracker.h  MemoryTrackerAnalysis.h  OperationTree.h  PipelineTree.h  Utils.h  WriteSetScan.h
include/dataflow-scheduler/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/dataflow-scheduler/Utils/: SchedulerExtContext.h
lib/: CMakeLists.txt  Pipeline.cpp  RegisterEverything.cpp
lib/Analysis/: CMakeLists.txt  InvarianceCheck.cpp  MemoryTracker.cpp  MemoryTrackerAnalysis.cpp  OperationTree.cpp  PipelineTree.cpp  Utils.cpp  WriteSetScan.cpp
lib/Analysis/ArchViews/: CMakeLists.txt  MemoryTree.cpp  ResourceKinds.cpp  RoutingGraph.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/Utils/: CMakeLists.txt  Utils.cpp
lib/Conversion/frontend/: CMakeLists.txt
lib/Dialect/KTDF/: CMakeLists.txt
lib/Transforms/: AddressAssignment.cpp  AffineMinCanonicalization.cpp  CMakeLists.txt  DoubleBuffering.cpp  NormalizeGridTo1D.cpp  ParallelizeLoopsAcrossInstances.cpp  PathExpansion.cpp  ScalarBroadcastLegalization.cpp  StripMineSCFForLoops.cpp  TileSCFForLoops.cpp
lib/Transforms/PathExpansion/: Materializer.cpp  Planner.cpp  PlannerFactories.cpp
lib/Transforms/Utils/: CMakeLists.txt  CustomLinalgTiling.cpp  PipelineTreeLegalizer.cpp  RegionClonePrune.cpp  SCFTilingUtils.cpp  Utils.cpp
lib/Utils/: CMakeLists.txt  SchedulerExtContext.cpp
python/: CMakeLists.txt  DataflowSchedulerModule.cpp  requirements.txt
python/mlir_scheduler/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Dialect/KTDFArch/: sample_device.mlir
test/Transforms/AddressAssignment/: basic.mlir  memory_tracker.mlir
test/Transforms/AffineMinCanonicalization/: basic.mlir
test/Transforms/BroadcastPromotion/: basic-broadcast-multiple-ivs.mlir  basic-broadcast-single-iv.mlir  basic-pass-registered.mlir  broadcast-fixed-point-iteration.mlir  broadcast-multiple-transfers-separate-pipelines.mlir  broadcast-nested-pipelines.mlir  broadcast-with-scf-if.mlir  broadcast-with-ssa-deps.mlir  no-hoist-destination-depends-on-iv.mlir  no-hoist-fifo-destination.mlir  no-hoist-non-scf-for-parent.mlir  (+5 more)
test/dataflow-scheduler/: dialects.mlir  round-trip.mlir
test/dataflow-scheduler-opt/: dialects.mlir
test/python/: import.py
tools/: CMakeLists.txt
tools/dataflow-scheduler/: CMakeLists.txt  dataflow-scheduler-main.cpp  dataflow-scheduler-main.h  dataflow-scheduler.cpp
tools/dataflow-scheduler-lsp-server/: CMakeLists.txt  dataflow-scheduler-lsp-server.cpp
tools/dataflow-scheduler-opt/: CMakeLists.txt  dataflow-scheduler-opt.cpp
(+204 files in other folders)
